UtahLiveDataTest/src/objects/ProgressReportCostBreakdown__c.object
<CustomObject>
    <description>[Business] Need more Details (Need to revisit this object) Duplicate for (Progress Report Cost Breakdown1)</description>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Category</label>
        <referenceTo>BudgetCategory__c</referenceTo>
        <relationshipLabel>Progress Report Cost Breakdown</relationshipLabel>
        <relationshipName>Progress_Report_Cost_Breakdown</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CatName__c</fullName>
        <formula>ReportBudgetCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <label>Category Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProgressReport__c</fullName>
        <label>Progress Report</label>
        <referenceTo>ProgressReports__c</referenceTo>
        <relationshipLabel>Progress Report Cost Breakdown</relationshipLabel>
        <relationshipName>ProgressReportCostBreakdown</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReportBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Budget Category</label>
        <referenceTo>ReportBudgetCategory__c</referenceTo>
        <relationshipLabel>Progress Report Cost Breakdown</relationshipLabel>
        <relationshipName>Progress_Report_Cost_Breakdown</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RowNumberFormula__c</fullName>
        <formula>ReportBudgetCategory__r.RowNumber__c</formula>
        <label>Row Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RowNumber__c</fullName>
        <label>Row Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Progress Report Cost Breakdown</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRCost-{0000}</displayFormat>
        <label>Progress Report Cost Breakdown Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Progress Report Cost Breakdown</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>